--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "record"]
 	path = record
-	url = https://gitlab.lrz.de/de-tum-ei-eda-esl/ESD4ML/tum-speech-recording.git
+	url = https://github.com/tum-ei-eda/tum-speech-recording.git
