--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "record"]
 	path = record
 	url = https://github.com/tum-ei-eda/tum-speech-recording.git
+[submodule "tvm/espidf"]
+	path = tvm/espidf
+	url = https://github.com/PhilippvK/microtvm-espidf-template.git
